--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "@expo/webpack-config": "~19.0.1",
-    "@miblanchard/react-native-slider": "^2.3.1",
-    "@openforis/arena-core": "^0.0.189",
+    "@miblanchard/react-native-slider": "^2.6.0",
+    "@openforis/arena-core": "^0.0.198",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-clipboard/clipboard": "^1.13.2",
-    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-clipboard/clipboard": "^1.14.1",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-native-community/netinfo": "11.1.0",
-    "@react-navigation/native": "^6.1.12",
-    "@react-navigation/native-stack": "^6.9.20",
-    "@reduxjs/toolkit": "^2.2.1",
-    "expo": "^50.0.17",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.6",
+    "expo": "~50.0.19",
     "expo-application": "~5.8.4",
     "expo-asset": "~9.0.2",
     "expo-battery": "~7.7.2",
@@ -39,22 +39,22 @@
     "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
-    "i18next": "^23.10.0",
+    "i18next": "^23.11.5",
     "lz-string": "^1.5.0",
-    "mime": "^4.0.1",
+    "mime": "^4.0.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^14.0.5",
+    "react-i18next": "^14.1.2",
     "react-native": "0.73.6",
     "react-native-check-version": "^1.1.1",
     "react-native-collapsible": "^1.6.1",
-    "react-native-device-info": "^10.13.0",
+    "react-native-device-info": "^11.1.0",
     "react-native-dots-pagination": "^0.3.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-error-boundary": "^1.2.4",
     "react-native-final-tree-view": "^3.0.0",
-    "react-native-keychain": "^8.1.3",
+    "react-native-keychain": "^8.2.0",
     "react-native-open-maps": "^0.4.3",
     "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
@@ -65,17 +65,17 @@
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-version-number": "^0.3.6",
     "react-native-view-more-text": "^2.2.0",
-    "react-native-web": "~0.19.10",
-    "react-native-zip-archive": "^6.1.0",
-    "react-redux": "^9.1.0",
+    "react-native-web": "~0.19.12",
+    "react-native-zip-archive": "^7.0.0",
+    "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "rn-swipe-button": "^1.3.8",
-    "socket.io-client": "^4.7.4",
-    "uuid": "^9.0.1"
+    "socket.io-client": "^4.7.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "babel-plugin-module-resolver": "^5.0.0",
+    "@babel/core": "^7.24.7",
+    "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "dotenv": "^16.4.5",
     "metro-react-native-babel-preset": "^0.77.0"
