--- a/package.json
+++ b/package.json
@@ -90,8 +90,7 @@
     "eslint-plugin-ft-flow": "^3.0.11",
     "eslint-plugin-react": "^7.36.1",
     "metro-react-native-babel-preset": "^0.77.0",
-    "prettier": "^3.3.3",
-    "typescript": "^5.6.2"
+    "prettier": "^3.3.3"
   },
   "private": true,
   "packageManager": "yarn@4.5.0"
