--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arena-mobile-experiments",
-  "version": "1.1.15",
+  "version": "1.1.16",
   "scripts": {
     "start": "expo start",
     "start-tunnel": "expo start --tunnel",
@@ -12,7 +12,7 @@
   "dependencies": {
     "@expo/webpack-config": "~19.0.1",
     "@miblanchard/react-native-slider": "^2.6.0",
-    "@openforis/arena-core": "../../openforis/arena-core",
+    "@openforis/arena-core": "^0.0.207",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-community/datetimepicker": "7.7.0",
