--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "~19.0.1",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@openforis/arena-core": "^0.0.209",
+    "@os-team/i18next-react-native-language-detector": "^1.0.34",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-community/datetimepicker": "7.7.0",
