--- a/package.json
+++ b/package.json
@@ -52,9 +52,7 @@
     "react-native": "0.73.6",
     "react-native-check-version": "^1.1.1",
     "react-native-collapsible": "^1.6.1",
-    "react-native-device-info": "^11.1.0",
     "react-native-dots-pagination": "^0.3.1",
-    "react-native-dropdown-picker": "^5.4.6",
     "react-native-error-boundary": "^1.2.4",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-keychain": "^8.2.0",
@@ -74,8 +72,7 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "rn-swipe-button": "^1.3.8",
-    "socket.io-client": "^4.7.5",
-    "uuid": "^10.0.0"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
