--- a/package.json
+++ b/package.json
@@ -13,60 +13,60 @@
     "@expo/webpack-config": "~19.0.1",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@openforis/arena-core": "^1.0.5",
-    "@os-team/i18next-react-native-language-detector": "^1.1.2",
+    "@os-team/i18next-react-native-language-detector": "^1.0.34",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-clipboard/clipboard": "^1.15.0",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-clipboard/clipboard": "^1.14.2",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.3.0",
-    "expo": "^52.0.11",
-    "expo-application": "~6.0.1",
-    "expo-asset": "~11.0.1",
-    "expo-battery": "~9.0.1",
-    "expo-build-properties": "~0.13.1",
-    "expo-camera": "~16.0.7",
-    "expo-constants": "~17.0.3",
-    "expo-crypto": "~14.0.1",
-    "expo-device": "~7.0.1",
-    "expo-document-picker": "~13.0.1",
-    "expo-file-system": "~18.0.4",
-    "expo-image-manipulator": "~13.0.5",
-    "expo-image-picker": "~16.0.3",
-    "expo-location": "~18.0.2",
-    "expo-media-library": "~17.0.3",
-    "expo-screen-orientation": "~8.0.0",
-    "expo-secure-store": "~14.0.0",
-    "expo-sensors": "~14.0.1",
-    "expo-sharing": "~13.0.0",
-    "expo-sqlite": "~15.0.3",
-    "expo-status-bar": "~2.0.0",
-    "expo-web-browser": "~14.0.1",
-    "i18next": "^23.16.8",
+    "expo": "^51.0.38",
+    "expo-application": "~5.9.1",
+    "expo-asset": "~10.0.10",
+    "expo-battery": "~8.0.1",
+    "expo-build-properties": "~0.12.5",
+    "expo-camera": "~15.0.16",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-device": "~6.0.2",
+    "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.5",
+    "expo-screen-orientation": "~7.0.5",
+    "expo-secure-store": "~13.0.2",
+    "expo-sensors": "~13.0.9",
+    "expo-sharing": "~12.0.1",
+    "expo-sqlite": "~14.0.6",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
+    "i18next": "^23.16.2",
     "lz-string": "^1.5.0",
     "mime": "^4.0.4",
     "prop-types": "^15.8.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^14.1.3",
-    "react-native": "0.76.3",
+    "react-native": "0.74.5",
     "react-native-check-version": "^1.3.0",
     "react-native-collapsible": "^1.6.2",
     "react-native-device-info": "^11.1.0",
     "react-native-dots-pagination": "^0.3.1",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-error-boundary": "^1.2.7",
+    "react-native-error-boundary": "^1.2.5",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-keychain": "^8.2.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-open-maps": "^0.4.3",
-    "react-native-pager-view": "6.5.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dropdown": "^1.0.7",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-side-drawer": "^2.1.0",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-version-number": "^0.3.6",
@@ -76,15 +76,15 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "rn-swipe-button": "^1.3.8",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/eslint-parser": "^7.25.9",
-    "@eslint/compat": "^1.2.3",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.15.0",
-    "@react-native/eslint-config": "^0.76.3",
+    "@babel/core": "^7.25.8",
+    "@babel/eslint-parser": "^7.25.8",
+    "@eslint/compat": "^1.2.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
+    "@react-native/eslint-config": "^0.75.4",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "dotenv": "^16.4.5",
@@ -92,7 +92,7 @@
     "eslint-plugin-ft-flow": "^3.0.11",
     "eslint-plugin-react": "^7.37.1",
     "metro-react-native-babel-preset": "^0.77.0",
-    "prettier": "^3.4.1"
+    "prettier": "^3.3.3"
   },
   "private": true,
   "packageManager": "yarn@4.5.0"
